[package]
name = "cincinnati-graph-data"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
cincinnati = { git = "https://github.com/openshift/cincinnati", rev = "67fe062a9e4b9df11c014b4c7fcfd3d8179b508a"}
actix-http = "^3.9.0"
actix-service = "=2.0.2"
tokio = { version = "^1.14", features = [ "fs", "rt-multi-thread" ] }
serde = "^1.0.213"
serde_yaml = "^0.9.34"
anyhow = "1.0"
regex = "^1.11.1"
semver = { version = "^0.11", features = [ "serde" ] }
toml = "^0.8.19"
lazy_static = "^1.5.0"
url = "^2.5.2"
reqwest = { version = "^0.11", features = ["gzip"] }
futures = "^0.3"
itertools = "^0.13"
zeroize = "=1.3.0"
test-case = "^3.3.1"
