[package]
name = "cincinnati-graph-data"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
cincinnati = { git = "https://github.com/hongkailiu/cincinnati", rev = "4c7aae63b686738e2be679f88589f4cddf31d91f"}
actix-http = "^3.11.0"
actix-service = "=2.0.3"
tokio = { version = "^1.14", features = [ "fs", "rt-multi-thread" ] }
serde = "^1.0.219"
serde_yaml = "^0.9.34"
anyhow = "1.0"
regex = "^1.11.1"
semver = { version = "^0.11", features = [ "serde" ] }
toml = "^0.8.22"
lazy_static = "^1.5.0"
url = "^2.5.4"
reqwest = { version = "^0.12", features = ["gzip"] }
futures = "^0.3"
itertools = "^0.14"
zeroize = "=1.7.0"
test-case = "^3.3.1"
