[package]
name = "cincinnati-graph-data"
version = "0.1.0"
authors = ["Vadim Rutkovsky <vrutkovs@redhat.com>"]
edition = "2018"

[dependencies]
cincinnati = { git = "https://github.com/openshift/cincinnati", rev = "88bb8cb71d7309de4535864627e85dca11712ce5"}
actix-http = "^3.11.0"
actix-service = "=2.0.3"
tokio = { version = "^1.14", features = [ "fs", "rt-multi-thread" ] }
serde = "^1.0.219"
serde_yaml = "^0.9.34"
anyhow = "1.0"
regex = "^1.11.1"
semver = { version = "^0.11", features = [ "serde" ] }
toml = "^0.8.23"
lazy_static = "^1.5.0"
url = "^2.5.4"
reqwest = { version = "^0.12", features = ["gzip"] }
futures = "^0.3"
itertools = "^0.14"
zeroize = "=1.7.0"
test-case = "^3.3.1"
